--- a/docs/pages/getting-started/providers/authentik.mdx
+++ b/docs/pages/getting-started/providers/authentik.mdx
@@ -119,6 +119,7 @@ app.use("/auth/*", ExpressAuth({
 </Code>
 
 <Callout>
+  Before V5:
   issuer should include the slug without a trailing slash – e.g.,
   https://my-authentik-domain.com/application/o/My_Slug
 </Callout>
